updated voice